# ml-project-taa

./: README.md  pyproject.toml
src/ml_project_taa/utils/: invariants.py
tests/: test_invariants_returns.py  test_invariants_weights.py
