[project]
name = "ml-project-taa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miyuna Iwai", email = "s245591q@st.go.tuat.ac.jp" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
